--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
+    "busboy": "^0.3.1",
+    "child-process-promise": "^2.2.1",
+    "cors": "^2.8.5",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0"
   },
